[package]
name = "snaprs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = '4.5.37', features = ['derive'] }
rustfft = "6.3.0"
lockfree-object-pool = '0.1.3'
crossbeam = '0.8.4'
rayon = '1.10.0'
chrono = '0.4.40'
num = '0.4.3'
rand = "0.9.1"
rand_distr = '0.5.1'


[build-dependencies]
bindgen = "0.71.1"
cbindgen = "0.29.0"
